product_docs/docs/pem/7.13/pem_admin/index.mdx
---
title: "PEM Administrator's Guide"
---



This document provides an introduction to Postgres Enterprise Manager (PEM). Postgres Enterprise Manager (PEM) is an enterprise management tool designed to assist database administrators, system architects, and performance analysts in administering, monitoring, and tuning PostgreSQL and EnterpriseDB Advanced Server database servers. PEM is architected to manage and monitor anywhere from a handful, to hundreds of servers from a single console, allowing complete and remote control over all aspects of your databases.

For information about the platforms and versions supported by PEM, visit the EnterpriseDB website at:

> <https://www.enterprisedb.com/services-support/edb-supported-products-and-platforms#pem>

This document uses *Postgres* to mean either the PostgreSQL or EDB Postgres Advanced Server database.

<div class="toctree" maxdepth="3">

overview registering\_server managing\_certificates managing\_configuration\_settings managing\_pem\_server managing\_pem\_agent conclusion

</div>
