product_docs/docs/pem/8.0.1/pem_admin/index.mdx
---
navTitle: Administrator's Guide
title: "PEM Administrator's Guide"
---

This document provides an introduction to Postgres Enterprise Manager (PEM). Postgres Enterprise Manager (PEM) is an enterprise management tool designed to assist database administrators, system architects, and performance analysts in administering, monitoring, and tuning PostgreSQL and EDB Advanced Server database servers. PEM is architected to manage and monitor anywhere from a handful, to hundreds of servers from a single console, allowing complete and remote control over all aspects of your databases.

For information about the platforms and versions supported by PEM, visit the EDB website at:

 <https://www.enterprisedb.com/services-support/edb-supported-products-and-platforms#pem>

**Please note**: PEM 8.0.1 is no longer supported on CentOS/RHEL/OEL 6.x platforms. It is strongly recommended that EDB products running on these platforms be migrated to a supported platform.

This document uses *Postgres* to mean either the PostgreSQL or EDB Postgres Advanced Server database.

<div class="toctree" maxdepth="3">

overview registering_server pem_define_aws_instance_connection managing_certificates managing_configuration_settings managing_pem_server managing_pem_agent conclusion

</div>
